# OtusTasks

./: .travis.yml  bintray-conf.json  bintray-preconf.json  descriptor.json  test
Otus01/: CMakeLists.txt  make_deb_package.sh
Otus01/src/: lib.cpp  main.cpp  version.h.in
Otus02/: CMakeLists.txt
Otus02/src/: ip_filter.cpp
